docs: override source prefix

--- a/docs/content/docs/2.collections/3.sources.md
+++ b/docs/content/docs/2.collections/3.sources.md
@@ -50,6 +50,19 @@ It represents the path prefix (base URL) of the corresponding page on the websit
 The `prefix` must start by a leading `/`.
 ::
 
+By default, module extracts the static prefix of `source`(or `source.include`) and uses it as a prefix for content paths. For example, if you define `/en/**` source, module will auto-fill the `prefix` with `/en`. You can manually provide a prefix to override this behavior. The prefix can be removed by setting `prefix: '/'` in the collection source.
+
+```ts
+defineCollection({
+  type: "page",
+  source: {
+    include: "en/**",
+    exclude: ["en/index.md"],
+    prefix: '/'
+  }
+})
+```
+
 ### `cwd`
 
 Root directory for content matching.
