--- a/docs/content/docs/6.deploy/2.serverless.md
+++ b/docs/content/docs/6.deploy/2.serverless.md
@@ -108,8 +108,10 @@ export default defineNuxtConfig({
   content: {
     database: {
       type: 'sqlite',
-      filename: '/tmp/contents.sqlite',
-    },
+      filename: '/tmp/contents.sqlite'
+    }
+  }
+})
 ```
 ::
 
