--- a/docs/content/docs/1.getting-started/4.migration.md
+++ b/docs/content/docs/1.getting-started/4.migration.md
@@ -151,3 +151,14 @@ Many `ProsePre` components are thin wrappers around the `ProseCode` component. W
 
 1. Your current `ProseCode` logic should be moved to `ProsePre`
 2. Rename your `ProseCodeInline` components to `ProseCode`
+
+## `_dir.yml` files are renamed to `.navigation.yml`
+
+In Content v3, we renamed `_dir.yml` to `.navigation.yml`. The new name better reflects the purpose of these files.  
+Module uses these files to gather information about directories for generating navigation.
+
+Note that in order to make these files available for Module, youe should define your collection's source in
+a way that includes these files. For example `source: '**'` and `source: '**/*.{md|yml}` will include these files
+in collection, but `source: '**/*.md'` will not include them.
+
+
