docs: excluding dot files from collection
resolves #3090

--- a/docs/content/docs/1.getting-started/4.migration.md
+++ b/docs/content/docs/1.getting-started/4.migration.md
@@ -45,6 +45,7 @@ The new API is backed by SQL and content queries happens within a specific colle
 - There is no source option in module options, instead you can define [multiple sources](/docs/collections/sources) for your collections in `content.config.ts`.
 - Document `._path` is now renamed to `.path`, likewise all internal fields with `_` prefix are removed or renamed.
 - `useContentHelpers()` is removed
+- Module does not ignore dot files by default, you can ignore them by adding `ignore: ['**/.*']` in `exclude` options of your collection source.
 
 ### Nuxt Studio integration
 
@@ -160,5 +161,32 @@ Module uses these files to gather information about directories for generating n
 Note that in order to make these files available for Module, youe should define your collection's source in
 a way that includes these files. For example `source: '**'` and `source: '**/*.{md|yml}` will include these files
 in collection, but `source: '**/*.md'` will not include them.
+
+
+## Ignore dot files
+
+By default, Content v3 does not ignore dot files. If you want to ignore them, you can add `ignore: ['**/.*']` in the `exclude` option of your collection source.
+
+```ts
+defineCollection({
+  source: {
+    include: '**',
+    exclude: ['**/.*']
+  }
+})
+```
+
+Note that the above pattern will also excldue `.navigation.yml` file from collection. If you use `.navigation.yml` and want to keep them
+you can use `**/.(!(navigation.yml))` patter to exclude all dot files except `.navigation.yml`.
+
+```ts
+defineCollection({
+  source: {
+    include: '**',
+    exclude: ['**/.!(navigation.yml)']
+  }
+})
+```
+
 
 
