fix(docs): Use `bindingName` instead of `binding`
As per Nuxt content 3.1.0, the property `binding` is deprecated in favor of `bindingName`, as configured in the type `D1DatabaseConfig`.

--- a/docs/content/docs/1.getting-started/3.configuration.md
+++ b/docs/content/docs/1.getting-started/3.configuration.md
@@ -310,14 +310,14 @@ export default defineNuxtConfig({
 
 ### `D1`
 
-If you plan to deploy your application to Cloudflare workers, you need to use the `d1` database adapter. Create a `d1` binding in the Cloudflare dashboard and fill in the `binding` field.
+If you plan to deploy your application to Cloudflare workers, you need to use the `d1` database adapter. Create a `d1` binding in the Cloudflare dashboard and fill in the `bindingName` field.
 
 ```ts [nuxt.config.ts]
 export default defineNuxtConfig({
   content: {
     database: {
       type: 'd1',
-      binding: 'CF_BINDING_NAME'
+      bindingName: 'CF_BINDING_NAME'
     }
   }
 })
