--- a/docs/content/docs/6.deploy/2.serverless.md
+++ b/docs/content/docs/6.deploy/2.serverless.md
@@ -15,9 +15,9 @@ Serverless hosting lets you run code and applications without managing servers d
 
 The module have built-in support for couple of famous serverless platforms. You can deploy your project to them with ease. Checkout the guides for each platform:
 
-- [NuxtHub](/deploy/nuxthub)
-- [Cloudflare](/deploy/cloudflare)
-- [Vercel](/deploy/vercel)
+- [NuxtHub](/docs/deploy/nuxthub)
+- [Cloudflare](/docs/deploy/cloudflare)
+- [Vercel](/docs/deploy/vercel)
 
 If you like to deploy to other platforms, you can follow below steps to deploy your project.
 
