--- a/docs/content/docs/5.components/0.content-renderer.md
+++ b/docs/content/docs/5.components/0.content-renderer.md
@@ -5,37 +5,41 @@ description: Takes your component from an AST to a wonderful template.
 
 The `<ContentRenderer>` component renders a document coming from a query with [`queryCollections()`](/docs/utils/query-collection).
 
-> This component works only with `pages` collections.
+::note 
+This component **only works** with the `pages` collection.
+::
 
 ## Props
 
-- `value`: The document to render.
-  - Type: `ParsedContent`
-  - Default: `{}`
-- `tag`: The tag to use for the renderer element if it is used.
-  - Type: `string`
-  - Default: `'div'`
-- `excerpt`: Whether to render the excerpt only without the rest of the content.
-  - Type: `boolean`
-  - Default: `false`
-- `components`: The map of custom components to use for rendering. This prop will pass to markdown renderer and will not affect other file types.
-  - Type: `object`
-  - Default: `{}`
-- `data`: A map of variables to inject into the markdown content for later use in binding variables.
-  - Type: `object`
-  - Default: `{}`
-- `prose`: Whether or not to render Prose components instead of HTML tags.
-  - Type: `boolean`
-  - Default: `undefined`
-- `class`: Root tag to use for rendering.
-  - Type: `string` or `object`
-  - Default: `undefined`
-- `unwrap`: Tags to unwrap separated by spaces.
-  - Type: `boolean` or `string`
-  - Default: `false`
-  - Example: `'ul li'`
+::field-group
+  ::field{name="value" default="{}" type="ParsedContent"}
+  The document to render.
+  ::
+  ::field{name="tag" default="'div'" type="string"}
+  The tag to use for the renderer element if it is used.
+  ::
+  ::field{name="excerpt" default="false" type="boolean"}
+  Whether to render the excerpt only without the rest of the content.
+  ::
+  ::field{name="components" default="{}" type="object"}
+  The map of custom components to use for rendering. This prop will pass to markdown renderer and will not affect other file types.
+  ::
+  ::field{name="data" default="{}" type="object" required}
+  A map of variables to inject into the markdown content for later use in binding variables.
+  ::
+  ::field{name="prose" default="undefined" type="boolean"}
+  Whether or not to render Prose components instead of HTML tags.
+  ::
+  ::field{name="class" default="undefined" type="string or object"}
+  Root tag to use for rendering.
+  ::
+  ::field{name="unwrap" default="false" type="boolean or string"}
+  Tags to unwrap separated by spaces.
+  Example: `'ul li'`
+  ::
+::
 
-## Example
+## Example Usage
 
 ```vue [pages/[...slug\\].vue]
 <script lang="ts" setup>
@@ -47,5 +51,30 @@ const { data: page } = await useAsyncData(route.path, () => {
 
 <template>
   <ContentRenderer v-if="page" :value="page" />
+</template>
+```
+
+## Handling Empty Pages or Missing Pages
+If the queried content is **empty or missing**, you can display a **custom fallback message**.
+
+```vue [pages/[...slug\\].vue]
+<script lang="ts" setup>
+const route = useRoute()
+const { data: page } = await useAsyncData(route.path, () => {
+  return queryCollection('docs').path(route.path).findOne()
+})
+</script>
+
+<template>
+  <template v-if="page">
+    <ContentRenderer :value="page" />
+  </template>
+  <template v-else>
+    <div class="empty-page">
+      <h1>Page Not Found</h1>
+      <p>Oops! The content you're looking for doesn't exist.</p>
+      <NuxtLink to="/">Go back home</NuxtLink>
+    </div>
+  </template>
 </template>
 ```
