docs: add documentation about built-in providers (#3115)

--- a/docs/content/docs/6.deploy/2.serverless.md
+++ b/docs/content/docs/6.deploy/2.serverless.md
@@ -13,6 +13,14 @@ Serverless hosting lets you run code and applications without managing servers d
 
 ## Deploy with Serverless
 
+The module have built-in support for couple of famous serverless platforms. You can deploy your project to them with ease. Checkout the guides for each platform:
+
+- [NuxtHub](/docs/deploy/nuxthub)
+- [Cloudflare Pages](/docs/deploy/cloudflare-pages)
+- [Vercel](/docs/deploy/vercel)
+
+If you like to deploy to other platforms, you can follow below steps to deploy your project.
+
 ### 1. Select a database service
 
 Before deploying your project, you need to select a database service:
