--- a/docs/content/docs/3.files/1.markdown.md
+++ b/docs/content/docs/3.files/1.markdown.md
@@ -72,7 +72,7 @@ To display the content of a markdown file, you can use the [`<ContentRenderer>`]
 <script setup>
 const slug = useRoute().params.slug
 const { data: post } = await useAsyncData(`blog-${slug}`, () => {
-  return queryCollection('blog').path(slug).first()
+  return queryCollection('blog').path(`/blog/${slug}`).first()
 })
 </script>
 
