docs: fix table on config key

--- a/docs/content/docs/1.getting-started/3.configuration.md
+++ b/docs/content/docs/1.getting-started/3.configuration.md
@@ -145,14 +145,9 @@ type Highlight = false | object
 
 Nuxt Content uses [Shiki](https://github.com/shikijs/shiki) to provide syntax highlighting for [`ProsePre`](/docs/components/prose#prosepre) and [`ProseCode`](/docs/components/prose#prosecode).
 
-|        |      |                                                                                                                  |
-| ------ | ---- | ---------------------------------------------------------------------------------------------------------------- |
-|        |      |                                                                                                                  |
-|        |      |                                                                                                                  |
-|        |      |                                                                                                                  |
-| Option | Type | Description                                                                                                      |
-|        |      | The [color theme](https://github.com/shikijs/shiki/blob/main/docs/themes.md) to use.                             |
-|        |      | The [loaded languages](https://github.com/shikijs/shiki/blob/main/docs/languages.md) available for highlighting. |
+| Option  | Type                                         | Description                                                                                                      |
+| `theme` | `ShikiTheme` or `Record<string, ShikiTheme>` | The [color theme](https://github.com/shikijs/shiki/blob/main/docs/themes.md) to use.                             |
+| `langs` | `ShikiLang[]`                                | The [loaded languages](https://github.com/shikijs/shiki/blob/main/docs/languages.md) available for highlighting. |
 
 - `highlight.theme`
 
