--- a/docs/content/docs/5.components/0.content-renderer.md
+++ b/docs/content/docs/5.components/0.content-renderer.md
@@ -11,33 +11,17 @@ This component **only works** with the `pages` collection.
 
 ## Props
 
-::field-group
-  ::field{name="value" default="{}" type="ParsedContent"}
-  The document to render.
-  ::
-  ::field{name="tag" default="'div'" type="string"}
-  The tag to use for the renderer element if it is used.
-  ::
-  ::field{name="excerpt" default="false" type="boolean"}
-  Whether to render the excerpt only without the rest of the content.
-  ::
-  ::field{name="components" default="{}" type="object"}
-  The map of custom components to use for rendering. This prop will pass to markdown renderer and will not affect other file types.
-  ::
-  ::field{name="data" default="{}" type="object" required}
-  A map of variables to inject into the markdown content for later use in binding variables.
-  ::
-  ::field{name="prose" default="undefined" type="boolean"}
-  Whether or not to render Prose components instead of HTML tags.
-  ::
-  ::field{name="class" default="undefined" type="string or object"}
-  Root tag to use for rendering.
-  ::
-  ::field{name="unwrap" default="false" type="boolean or string"}
-  Tags to unwrap separated by spaces.
-  Example: `'ul li'`
-  ::
-::
+| Prop        | Default      | Type                        | Description |
+|------------|------------|----------------------------|-------------|
+| `value`    | `{}`        | `ParsedContent`            | The document to render. |
+| `tag`      | `'div'`     | `string`                   | The tag to use for the renderer element if it is used. |
+| `excerpt`  | `false`     | `boolean`                  | Whether to render the excerpt only without the rest of the content. |
+| `components` | `{}`      | `object`                   | The map of custom components to use for rendering. This prop will pass to the markdown renderer and will not affect other file types. |
+| `data`     | `{}`        | `object` (required)        | A map of variables to inject into the markdown content for later use in binding variables. |
+| `prose`    | `undefined` | `boolean`                  | Whether or not to render Prose components instead of HTML tags. |
+| `class`    | `undefined` | `string` or `object`       | Root tag to use for rendering. |
+| `unwrap`   | `false`     | `boolean` or `string`      | Tags to unwrap separated by spaces. Example: `'ul li'`. |
+
 
 ## Example Usage
 
@@ -54,8 +38,8 @@ const { data: page } = await useAsyncData(route.path, () => {
 </template>
 ```
 
-## Handling Empty Pages or Missing Pages
-If the queried content is **empty or missing**, you can display a **custom fallback message**.
+## Handling Missing Pages
+If the queried content is **missing**, you can display a **custom fallback message**.
 
 ```vue [pages/[...slug\\].vue]
 <script lang="ts" setup>
@@ -78,3 +62,6 @@ const { data: page } = await useAsyncData(route.path, () => {
   </template>
 </template>
 ```
+
+## Handling Empty Pages 
+If the queried content is **empty**, you can display a **custom fallback message**.
