--- a/docs/content/docs/3.files/1.markdown.md
+++ b/docs/content/docs/3.files/1.markdown.md
@@ -433,7 +433,7 @@ customVariable: 'Custom Value'
 
 ```
 
-#### Example 2: Define in external with `<ContentRenderer>`
+### Example 2: Define in external with `<ContentRenderer>`
 
 ```html [test.vue]
 <template>
@@ -473,7 +473,7 @@ Read the complete Prose reference in the Prose Components section.
 
 ## Code Highlighting
 
-Nuxt Content uses [Shiki](https://github.com/shikijs/shiki), that colors tokens with VSCode themes.
+Nuxt Content uses [Shiki](https://github.com/shikijs/shiki), which colors tokens with VSCode themes.
 
 Code highlighting works both on [`ProsePre`](/docs/components/prose#prosepre) and [`ProseCode`](/docs/components/prose#prosecodeinline).
 
