--- a/docs/content/docs/4.utils/2.query-collection-navigation.md
+++ b/docs/content/docs/4.utils/2.query-collection-navigation.md
@@ -40,6 +40,15 @@ const { data } = await useAsyncData('navigation', () => {
 The `queryCollectionNavigation` utility is available in both Vue and Nitro. Checkout [Server Usage](#server-usage) for more details on how to use it on the server side.
 ::
 
+### Navigation metadata with `.navigation.yml`
+
+You can add metadata to a directory using a `.navigation.yml` file.
+
+```yml [.navigation.yml]
+title: Getting Started
+icon: i-lucide-square-play
+```
+
 ## API
 
 ### `queryCollectionNavigation(collection: CollectionName, extraField: keyof Collection)`
