--- a/docs/content/docs/1.getting-started/3.configuration.md
+++ b/docs/content/docs/1.getting-started/3.configuration.md
@@ -13,6 +13,10 @@ export default defineNuxtConfig({
 })
 ```
 
+::note{to="https://github.com/nuxt-modules/mdc#configurations"}
+In addition to configuring via `content.markdown`, you can use Markdown Components (MDC) to customize the rendering of Markdown elements with `mdc` property.
+::
+
 ## `build`
 
 Nuxt Content read and parse all the available contents at build time. This option gives you control over parsing contents.
