--- a/docs/content/docs/2.collections/1.define.md
+++ b/docs/content/docs/2.collections/1.define.md
@@ -46,6 +46,12 @@ export default defineContentConfig({
 })
 ```
 
+::warning
+Currently, a document is designed to be present in only one collection at a time. If a file is referenced in multiple collections, live reload will not work correctly. To avoid this, it is recommended to use the `exclude` attribute to explicitly exclude a document from other collections using appropriate regex patterns.
+
+This topic is still under discussion in this issue: [nuxt/content#2966](https://github.com/nuxt/content/issues/2966).
+::
+
 ### Collection Schema
 
 Schemas enforce data consistency within a collection and serve as the source of truth for TypeScript types.
