--- a/docs/content/docs/8.studio/4.medias.md
+++ b/docs/content/docs/8.studio/4.medias.md
@@ -1,7 +1,7 @@
 ---
 title: Manage and integrate Medias in Nuxt Content Studio CMS
 navigation:
-  title: Medias
+  title: Media Library
 description: Explore how to browse and manage media files, and integrate them
   into your projects using Nuxt Content Studio CMS features.
 ---
