docs(1.getting-started/4.migration): example usage section links

--- a/docs/content/docs/1.getting-started/4.migration.md
+++ b/docs/content/docs/1.getting-started/4.migration.md
@@ -19,7 +19,7 @@ The new API is backed by SQL and content queries happens within a specific colle
 
 - `fetchContentNavigation()` API is replaced with new `queryCollectionNavigation()`
 - Surroundings now has its own separate API `queryCollectionItemSurroundings()`
-- Document driven mode is dropped: `Markdown` files will not convert to Nuxt pages automatically, you need to create pages, [check this section to see how](/docs/components/content-renderer#example).
+- Document driven mode is dropped: `Markdown` files will not convert to Nuxt pages automatically, you need to create pages, [check this section to see how](/docs/components/content-renderer#example-usage).
 - `useContent()` composable is removed
 - `searchContent()` is dropped in favor of the new `queryCollectionSearchSections` API
 - Full text search can easily be done using the `queryCollectionSearchSections` API, [check this section to see how](/docs/advanced/fulltext-search)
