--- a/docs/content/docs/7.advanced/7.llms.md
+++ b/docs/content/docs/7.advanced/7.llms.md
@@ -7,15 +7,6 @@ description: Learn how to generate AI-ready content files using Nuxt Content and
 
 The Nuxt Content module seamlessly integrates with [`nuxt-llms`](https://github.com/nuxtlabs/nuxt-llms) to prepare your content for Large Language Models (LLMs). When detected, it automatically extends the content generation process to create LLM-optimized output files.
 
-## How It Works
-
-The Content module enhances the LLMs module by adding two key options to control content generation:
-
-- `contentCollection`: Specifies which content collection to use as source
-- `contentFilters`: Defines filters to select specific content within the collection
-
-When generating content, the module uses these options to fetch and process your content into LLM-friendly formats (`llms.txt` and `llms_full.txt`).
-
 ## Setup Guide
 
 1. First, install the required module:
@@ -36,6 +27,33 @@ export default defineNuxtConfig({
     domain: 'https://your-site.com',
     title: 'Your Site Name',
     description: 'A brief description of your site',
+  },
+})
+```
+
+Nuxt Content will automatically detect Nuxt LLMs module and will create a section to each `page` collection.
+
+
+## Overriding the default behavior and adding custom sections
+
+The Content module enhances the LLMs module by adding two key options to control content generation:
+
+- `contentCollection`: Specifies which content collection to use as source
+- `contentFilters`: Defines filters to select specific content within the collection
+
+When generating content, the module uses these options to fetch and process your content into LLM-friendly formats (`llms.txt` and `llms_full.txt`).
+
+All you need is to add your custom sections to the `llms.sections` array and define the `contentCollection` and `contentFilters` for each section.
+
+
+```ts
+// nuxt.config.ts
+export default defineNuxtConfig({
+  modules: ['@nuxt/content', 'nuxt-llms'],
+  llms: {
+    domain: 'https://your-site.com',
+    title: 'Your Site Name',
+    description: 'A brief description of your site',
     sections: [
       {
         title: 'Documentation',
@@ -46,19 +64,13 @@ export default defineNuxtConfig({
         contentFilters: [
           { field: 'extension', operator: '=', value: 'md' },
           // You can add more filters here
-        ],
-        links: [
-          {
-            title: 'Getting Started',
-            description: 'Learn the basics',
-            url: '/docs/getting-started',
-          },
-        ],
+        ]
       },
     ],
   },
 })
 ```
+
 
 ## Content Filtering
 
