--- a/docs/content/docs/7.advanced/7.llms.md
+++ b/docs/content/docs/7.advanced/7.llms.md
@@ -5,7 +5,7 @@ description: Learn how to generate AI-ready content files using Nuxt Content and
 
 # LLMs Integration
 
-The Nuxt Content module seamlessly integrates with [`nuxt-llms`](https://github.com/nuxtlabs/nuxt-llms) to prepare your content for Large Language Models (LLMs). When detected, it automatically extends the content generation process to create LLM-optimized output files.
+The Nuxt Content module seamlessly integrates with [`nuxt-llms`](https://github.com/nuxtlabs/nuxt-llms) to prepare your content for Large Language Models (LLMs). When `nuxt-llms` is detected, Content module automatically extends the LLMs module and inject `page` collection to the LLMs module.
 
 ## Setup Guide
 
@@ -31,10 +31,12 @@ export default defineNuxtConfig({
 })
 ```
 
+That's it!
+
 Nuxt Content will automatically detect Nuxt LLMs module and will create a section to each `page` collection.
 
 
-## Overriding the default behavior and adding custom sections
+## Custom Sections
 
 The Content module enhances the LLMs module by adding two key options to control content generation:
 
@@ -70,9 +72,11 @@ export default defineNuxtConfig({
   },
 })
 ```
+::note
+If there is no section defined with the `contentCollection` option, the module will add `page` collections to the LLMs module.
+::
 
-
-## Content Filtering
+### Content Filtering
 
 You can use `contentFilters` to precisely control which content is included. Each filter consists of:
 - `field`: The content property to check
@@ -92,10 +96,6 @@ contentFilters: [
 ]
 ```
 
-## Output Files
-
-The Nuxt LLMs module generates two files:
-- `llms.txt`: A optimized, condensed version of your content
-- `llms_full.txt`: A complete export of all selected content
-
-These files are automatically formatted for optimal use with Large Language Models.
+::tip
+Checkout the [nuxt-llms documentation](https://github.com/nuxtlabs/nuxt-llms) for more information on how to use the LLMs module.
+::
