docs(installation): add note about new nuxt applications

--- a/docs/content/docs/1.getting-started/2.installation.md
+++ b/docs/content/docs/1.getting-started/2.installation.md
@@ -94,6 +94,18 @@ useSeoMeta({
 </template>
 ```
 
+::note{icon="i-lucide-info"}
+If you are installing Nuxt Content in a new Nuxt project and you didn't have `pages` directory, you also need to update the `app.vue` file to allow rendering the pages by adding the `NuxtPage` component. (If you already have some pages in your project, you are good to go.)
+
+```vue [app.vue]
+<template>
+  <NuxtLayout>
+    <NuxtPage />
+  </NuxtLayout>
+</template>
+```
+::
+
 ::tip{icon="i-lucide-rocket"}
 That's it! You've now created your first Nuxt Content page.
 ::
