--- a/docs/content/docs/4.utils/1.query-collection.md
+++ b/docs/content/docs/4.utils/1.query-collection.md
@@ -254,7 +254,7 @@ const { data } = await useAsyncData(route.path, () => {
 
 ## Examples
 
-Here is a complete example of how to fetch list of documents in `docs` collections.
+Here is a complete example of how to fetch a list of documents in the `docs` collections.
 
 ```vue [index.vue]
 <script setup lang="ts">
