docs: add missing section for the count method and fix some typos in the same file (#3209)

--- a/docs/content/docs/4.utils/1.query-collection.md
+++ b/docs/content/docs/4.utils/1.query-collection.md
@@ -221,9 +221,40 @@ const { data } = await useAsyncData(route.path, () => {
 })
 ```
 
+### `count()`
+
+Count the number of matched collection entries based on the query.
+
+```ts
+const route = useRoute()
+const { data } = await useAsyncData(route.path, () => {
+  return queryCollection('docs')
+    // Count matches
+    .count()
+})
+
+// Returns
+5 // number of matches
+```
+
+You can also use `count()` with other methods defined above such as `where()` in order to apply additional conditions within the collection query.
+
+```ts
+const route = useRoute()
+const { data } = await useAsyncData(route.path, () => {
+  return queryCollection('docs')
+    .where('date', '<', '2024-04-04')
+    // Count matches
+    .count()
+})
+
+// Returns
+3 // number of matches for the provided query
+```
+
 ## Examples
 
-Here is a complete example of how to fetch list of documents in `docs` collections.
+Here is a complete example of how to fetch a list of documents in the `docs` collections.
 
 ```vue [index.vue]
 <script setup lang="ts">
@@ -264,4 +295,3 @@ Make sure to create `server/tsconfig.json` file with the following content to av
 }
 ```
 :::
-
