--- a/docs/content/docs/8.studio/3.content.md
+++ b/docs/content/docs/8.studio/3.content.md
@@ -193,7 +193,7 @@ export default defineContentConfig({
 ```
 
   :::preview-card{icon="i-lucide-eye" label="Generated Form"}
-  ![Form preview](/blog/generated-form.png)
+  ![Form preview](/docs/studio/preview-schema.png)
   :::
 ::
 
@@ -206,6 +206,8 @@ Primitive Zod types are automatically mapped to appropriate form inputs in:
 - **Number** → Number input (counter)
 - **Boolean** → Toggle switch
 - **Enum** → Select dropdown
+- **Arrays of strings** → List of badge inputs
+- **Arrays of objects** → Accordion of items with embedded form
 
 ### Custom Inputs Mapping
 
@@ -231,10 +233,6 @@ This option can be set to avoid the display of a field in the Studio editor.
 
 ::prose-tip
 Studio inputs are fully extensible. We can create as many input as we want based on our users needs.
-::
-
-::warning
-Arrays are not yet handled but should be generated soon thanks to collections and user-defined schemas.
 ::
 
 ## Code editor
