docs: fix `watch` option usage
resovles #3216

--- a/docs/content/docs/1.getting-started/3.configuration.md
+++ b/docs/content/docs/1.getting-started/3.configuration.md
@@ -429,7 +429,8 @@ export default defineNuxtConfig({
 ```ts [Default]
 watch: {
   enabled: true,
-  ws: { port: 4000, showURL: false }
+  port: 4000,
+  showURL: false
 }
 ```
 
@@ -441,6 +442,8 @@ Value:
 - `port`: Select the port used for the WebSocket server.
 - `showURL`: Toggle URL display in dev server boot message.
 
+Nuxt Content uses [listhen](https://github.com/unjs/listhen) to provide a local development server. Check out the [listhen documentation](https://github.com/unjs/listhen#options) for more information.
+
 ::callout
 The watcher is a development feature and will not be included in production.
 ::
@@ -450,10 +453,8 @@ The watcher is a development feature and will not be included in production.
 export default defineNuxtConfig({
   content: {
     watch: {
-      ws: {
-        port: 4000,
-        showURL: true
-      }
+      port: 4000,
+      showURL: true
     }
   }
 })
