docs: update ordering files
closes #3087

--- a/docs/content/docs/1.getting-started/4.migration.md
+++ b/docs/content/docs/1.getting-started/4.migration.md
@@ -46,6 +46,7 @@ The new API is backed by SQL and content queries happens within a specific colle
 - Document `._path` is now renamed to `.path`, likewise all internal fields with `_` prefix are removed or renamed.
 - `useContentHelpers()` is removed
 - Module does not ignore dot files by default, you can ignore them by adding `ignore: ['**/.*']` in `exclude` options of your collection source.
+- Due to SQL limitations, sort order now uses alphabetical order instead for numerical order. Check out the [Ordering Files](/docs/collections/types#ordering-files) section for more information.
 
 ### Nuxt Studio integration
 
