--- a/docs/content/docs/2.collections/2.types.md
+++ b/docs/content/docs/2.collections/2.types.md
@@ -113,15 +113,23 @@ There’s no strict relationship between collection type and file extension. For
 
 For both types, you may want to control the display order in lists. Use numeric prefixes in file and directory names to specify an order. Nuxt Content will use these numbers when ordering content lists.
 
+::note
+Nuxt Content uses alphabetical order for sorting, so if you want to use numerical order, you need to prefix single digit numbers with `0`. For example, without the `0` prefix, `10.foo.md` would come before `2.bar.md`.
+::
+
 ```text [Directory structure]
 content/
   1.frameworks/
     1.vue.md
     2.nuxt.md
+    ...
   2.examples/
-    1.vercel.md
-    2.netlify.md
-    3.heroku.md
+    01.nuxthub.md
+    02.vercel.md
+    03.netlify.md
+    04.heroku.md
+    ...
+    10.cloudflare.md
     index.md
 ```
 
