chore: update 3.sources.md

--- a/docs/content/docs/2.collections/3.sources.md
+++ b/docs/content/docs/2.collections/3.sources.md
@@ -80,7 +80,25 @@ source: {
 
 ### `repository`
 
-External source representing a remote git repository URL (e.g., <https://github.com/nuxt/content>)
+External source representing a remote git repository URL (e.g., <https://github.com/nuxt/content>).
+
+When defining an external source you must also define the `include` option:
+
+```js
+import { defineCollection, defineContentConfig } from '@nuxt/content'
+
+export default defineContentConfig({
+  collections: {
+    docs: defineCollection({
+      source: {
+        repository: 'https://github.com/nuxt/content',
+        include: '**',
+      },
+      type: 'page'
+    })
+  }
+})
+```
 
 ### `authToken`
 
