--- a/examples/i18n/package.json
+++ b/examples/i18n/package.json
@@ -9,11 +9,9 @@
     "preview": "nuxt preview"
   },
   "dependencies": {
-    "@nuxt/content": "latest",
-    "@nuxtjs/i18n": "latest",
+    "@nuxt/content": "^3.3.0",
+    "@nuxtjs/i18n": "^9.3.1",
     "@nuxt/ui-pro": "^3.0.0",
-    "nuxt": "^3.16.0",
-    "vue": "latest",
-    "vue-router": "latest"
+    "nuxt": "^3.16.0"
   }
 }
