--- a/examples/i18n/package.json
+++ b/examples/i18n/package.json
@@ -9,7 +9,7 @@
     "preview": "nuxt preview"
   },
   "dependencies": {
-    "@nuxt/content": "^3.3.0",
+    "@nuxt/content": "latest",
     "@nuxtjs/i18n": "^9.3.1",
     "@nuxt/ui-pro": "^3.0.0",
     "nuxt": "^3.16.0"
