--- a/docs/content/1.get-started/1.installation.md
+++ b/docs/content/1.get-started/1.installation.md
@@ -11,7 +11,14 @@ description: Get started with Nuxt Content by creating a new project or adding i
 
 You can add Nuxt Content at anytime during your Nuxt project development by installing the `@nuxt/content` module:
 ```bash
-npx nuxi@latest module add @nuxt/content@2
+ # npm
+ npm install @nuxt/content@2
+ # yarn
+ yarn add @nuxt/content@2
+ # pnpm
+ pnpm add @nuxt/content@2
+ # bun
+ bun add @nuxt/content@2
 ```
 
 Then, add `@nuxt/content` to the `modules` section of `nuxt.config.ts`:
