Replace node:22-alpine with node:22

--- a/docs/content/docs/6.deploy/7.docker.md
+++ b/docs/content/docs/6.deploy/7.docker.md
@@ -31,7 +31,9 @@ RUN pnpm run build
 
 # Build Stage 2
 
-FROM node:22-alpine
+# node:22-alpine is not compatible with better-sqlite-3 module
+# See https://github.com/nuxt/content/issues/3248 for more details
+FROM node:22
 WORKDIR /app
 
 # Only `.output` folder is needed from the build stage
