--- a/docs/content/docs/6.deploy/1.server.md
+++ b/docs/content/docs/6.deploy/1.server.md
@@ -10,6 +10,15 @@ navigation:
 
 Node preset is the default preset for Nuxt, when building your project, Nuxt will output a Node.js server that you can run with `node .output/server/index.mjs`.
 
+## Environment requirement
+
+If you are using the default better-sqlite-3 module to operate the sqlite database, 
+then you have to deploy to an OS with Glibc version higher than 2.29 .
+
+You can use `ldd --version` to check the Glibc version.
+
+See https://github.com/nuxt/content/issues/3248 for more details.
+
 ## Building with Node.js preset
 
 Build project with Nuxt build command:
