Add OS examples

--- a/docs/content/docs/6.deploy/1.server.md
+++ b/docs/content/docs/6.deploy/1.server.md
@@ -13,7 +13,7 @@ Node preset is the default preset for Nuxt, when building your project, Nuxt wil
 ## Environment requirement
 
 If you are using the default better-sqlite-3 module to operate the sqlite database, 
-then you have to deploy to an OS with Glibc version higher than 2.29 .
+then you have to deploy to an OS with Glibc version higher than 2.29, eg. Debian 11, Ubuntu 20.04.
 
 You can use `ldd --version` to check the Glibc version.
 
