--- a/docs/content/docs/6.deploy/1.server.md
+++ b/docs/content/docs/6.deploy/1.server.md
@@ -12,12 +12,12 @@ Node preset is the default preset for Nuxt, when building your project, Nuxt wil
 
 ## Environment requirement
 
-If you are using the default better-sqlite-3 module to operate the sqlite database, 
+If you are using the default `better-sqlite3` module to operate the sqlite database, 
 then you have to deploy to an OS with Glibc version higher than 2.29, eg. Debian 11, Ubuntu 20.04.
 
-You can use `ldd --version` to check the Glibc version.
-
-See https://github.com/nuxt/content/issues/3248 for more details.
+::note
+You can use `ldd --version` to check the Glibc version. Checkout [issue #3248](https://github.com/nuxt/content/issues/3248) for more details.
+::
 
 ## Building with Node.js preset
 
