docs: add docs about experimental `nativeSqlite` flag

--- a/docs/content/docs/1.getting-started/3.configuration.md
+++ b/docs/content/docs/1.getting-started/3.configuration.md
@@ -489,3 +489,25 @@ preview: {
   api: 'https://api.nuxt.studio',
 }
 ```
+
+## `experimental`
+
+Experimental features that are not yet stable.
+
+### `experimental.nativeSqlite`
+
+As of Node.js v22.5.0, the `node:sqlite` module is available natively in Node.js.
+This allows Nuxt Content to use SQLite as a database without the need for an external package.
+
+```ts [nuxt.config.ts]
+export default defineNuxtConfig({
+  content: {
+    experimental: { nativeSqlite: true },
+  },
+});
+```
+
+::prose-note
+This feature is only available in Node.js v22.5.0 and above. Enabling this feature in older version will not do anything.
+::
+
