docs: return CollectionQueryGroup instead of void from andWhere and orWhere

--- a/docs/content/docs/4.utils/1.query-collection.md
+++ b/docs/content/docs/4.utils/1.query-collection.md
@@ -118,10 +118,7 @@ Add an AND condition group to the query. This allows for more complex query cond
 const { data } = await useAsyncData('recent-docs', () => {
   return queryCollection('docs')
     .where('published', '=', true)
-    .andWhere(query => {
-      query.where('date', '>', '2024-01-01')
-          .where('category', '=', 'news')
-    })
+    .andWhere(query => query.where('date', '>', '2024-01-01').where('category', '=', 'news'))
     .all()
 })
 ```
@@ -137,10 +134,7 @@ Add an OR condition group to the query. This allows for alternative conditions.
 const { data } = await useAsyncData('featured-docs', () => {
   return queryCollection('docs')
     .where('published', '=', true)
-    .orWhere(query => {
-      query.where('featured', '=', true)
-          .where('priority', '>', 5)
-    })
+    .orWhere(query => query.where('featured', '=', true).where('priority', '>', 5))
     .all()
 })
 ```
