Fix minor typo in nuxt/content documentation

--- a/docs/content/docs/2.collections/1.define.md
+++ b/docs/content/docs/2.collections/1.define.md
@@ -78,7 +78,7 @@ export default defineContentConfig({
 ```
 
 ::note
-`@nuxt/content` exposes a `z` object that contains a set of Zod schemas for common data types. Check the [Zod’s README](https://github.com/colinhacks/zod) for complete documentation on how Zod works and what features are available.
+`@nuxt/content` exposes a `z` object that contains a set of Zod schemas for common data types. Check [Zod’s README](https://github.com/colinhacks/zod) for complete documentation on how Zod works and what features are available.
 ::
 
 ::tip
