--- a/docs/content/docs/1.getting-started/4.migration.md
+++ b/docs/content/docs/1.getting-started/4.migration.md
@@ -23,6 +23,7 @@ The new API is backed by SQL and content queries happens within a specific colle
 - `useContent()` composable is removed
 - `searchContent()` is dropped in favor of the new `queryCollectionSearchSections` API
 - Full text search can easily be done using the `queryCollectionSearchSections` API, [check this section to see how](/docs/advanced/fulltext-search)
+- Module configuration has changed from v2. Check out [configuration page](/docs/getting-started/configuration) for details.
 
 ### Components
 
