--- a/docs/content/docs/1.getting-started/4.migration.md
+++ b/docs/content/docs/1.getting-started/4.migration.md
@@ -47,6 +47,7 @@ The new API is backed by SQL and content queries happens within a specific colle
 - `useContentHelpers()` is removed
 - Module does not ignore dot files by default, you can ignore them by adding `ignore: ['**/.*']` in `exclude` options of your collection source.
 - Due to SQL limitations, sort order now uses alphabetical order instead for numerical order. Check out the [Ordering Files](/docs/collections/types#ordering-files) section for more information.
+- Module options have changed from v2. Check out [configuration page](/docs/getting-started/configuration) for details.
 
 ### Nuxt Studio integration
 
