chore: update documentation to include information about csv files

--- a/docs/content/docs/2.collections/2.types.md
+++ b/docs/content/docs/2.collections/2.types.md
@@ -101,12 +101,12 @@ defineCollection({
 })
 ```
 
-The data type is useful for content that doesn’t directly correspond to a webpage but instead represents structured data you might want to query and display within your application.
+The data type is useful for content that doesn't directly correspond to a webpage but instead represents structured data you might want to query and display within your application.
 
 With data collections, you have complete control over the schema, allowing you to define custom structures.
 
 ::note
-There’s no strict relationship between collection type and file extension. For instance, a **page** collection can use [Markdown](/docs/files/markdown) or [YAML](/docs/files/yaml) or [JSON](/docs/files/json) files, and **data** collections can use any of these formats as well.
+There's no strict relationship between collection type and file extension. For instance, a **page** collection can use [Markdown](/docs/files/markdown) or [YAML](/docs/files/yaml) or [JSON](/docs/files/json) files, and **data** collections can use any of these formats as well.
 ::
 
 ## Ordering Files
