--- a/docs/content/docs/2.collections/3.sources.md
+++ b/docs/content/docs/2.collections/3.sources.md
@@ -91,7 +91,7 @@ import { defineCollection, defineContentConfig } from '@nuxt/content'
 export default defineContentConfig({
   collections: {
     docs: defineCollection({
-      type: 'page'
+      type: 'page',
       source: {
         repository: 'https://github.com/nuxt/content',
         include: 'docs/content/**',
@@ -104,6 +104,10 @@ export default defineContentConfig({
 ### `authToken`
 
 Authentication token for private repositories (e.g., GitHub personal access token).
+
+::warning{icon="i-lucide-shield-alert"}
+Never commit authentication tokens or credentials directly in your code. Use environment variables or other secure methods to provide these values at runtime.
+::
 
 ### `authBasic`
 
