docs(components): ContentRenderer only works with Markdown files

--- a/docs/content/docs/5.components/0.content-renderer.md
+++ b/docs/content/docs/5.components/0.content-renderer.md
@@ -6,7 +6,7 @@ description: Takes your component from an AST to a wonderful template.
 The `<ContentRenderer>` component renders a document coming from a query with [`queryCollections()`](/docs/utils/query-collection).
 
 ::note 
-This component **only works** with the `pages` collection.
+This component **only works** with `Markdown` files.
 ::
 
 ## Props
