docs(studio): integrate props components edition

--- a/docs/content/docs/8.studio/3.content.md
+++ b/docs/content/docs/8.studio/3.content.md
@@ -114,13 +114,13 @@ defineProps({
 
 The visual editor simplifies the component edition, allowing you to integrate and edit them directly in the visual editor. Non technical users can play with **slots** and **props** without any technical knowledge.
 
-![vue component edition on Studio](/docs/studio/home-content-studio-dark.webp)
+:video{autoplay controls loop src="https://res.cloudinary.com/nuxt/video/upload/v1744126742/studio/finalpropscomps_usfabp.mp4"}
+
+ 
 
 All components in the `/components/content` folder are available in the editor. Studio users can type `/` anywhere while editing to access the list of available components.
 
-  :::tip{to="/docs/studio/debug"}
-  Take a look at this section to validate your `Vue` component integration in the editor in local development.
-  :::
+:tip[Take a look at this section to validate your `Vue` component integration in the editor in local development.]{to="/docs/studio/debug"}
 ::
 
 #### Integrate built-in components from external libraries
