--- a/docs/content/blog/v3.md
+++ b/docs/content/blog/v3.md
@@ -135,7 +135,7 @@ const { data: posts } = await useAsyncData('blog', () => {
 
 We've updated the components to include only the essentials:
 
-- [ContentRender](/docs/components/content-renderer) to render the parsed Markdown to HTML & Vue components
+- [ContentRenderer](/docs/components/content-renderer) to render the parsed Markdown to HTML & Vue components
 - [Slot](/docs/components/slot) replaced `ContentSlot` as we now support unwrapping using a directive, making your Vue components perfectly compatible to be used in both Vue & Markdown
 - [Prose Components](/docs/components/prose) are pre-designed components tailored for MDC syntax, with integrated styling for a good appearance
 
