Minor documentation updates
Update 1.setup.md
Update 4.migration.md
Update 5.vercel.md
Update 7.aws-amplify.md

--- a/docs/content/docs/1.getting-started/4.migration.md
+++ b/docs/content/docs/1.getting-started/4.migration.md
@@ -178,8 +178,8 @@ defineCollection({
 })
 ```
 
-Note that the above pattern will also excldue `.navigation.yml` file from collection. If you use `.navigation.yml` and want to keep them
-you can use `**/.(!(navigation.yml))` patter to exclude all dot files except `.navigation.yml`.
+Note that the above pattern will also exclude `.navigation.yml` file from collection. If you use `.navigation.yml` and want to keep them
+you can use `**/.(!(navigation.yml))` pattern to exclude all dot files except `.navigation.yml`.
 
 ```ts
 defineCollection({
