--- a/docs/content/docs/6.deploy/5.vercel.md
+++ b/docs/content/docs/6.deploy/5.vercel.md
@@ -6,12 +6,12 @@ description: Deploy your Content app to Vercel
 ::card
 Quick Setup
 
-- Execeute `npx vercel deploy` command or go to Vercel dashboard and create a new project using git repository.
+- Execute `npx vercel deploy` command or go to Vercel dashboard and create a new project using git repository.
 ::
 
 :hr
 
-Nuxt Content projects can be deployed to Vercel with zero configuration. The module will automatically detects Vercel environment and prepare the necessary configuration for Vercel.
+Nuxt Content projects can be deployed to Vercel with zero configuration. The module will automatically detect a Vercel environment and will prepare the necessary configuration for deployment.
 
 All you need to do is to execute `npx vercel deploy` command or go to Vercel dashboard and create a new project using git repository.
 
