--- a/docs/content/docs/6.deploy/7.aws-amplify.md
+++ b/docs/content/docs/6.deploy/7.aws-amplify.md
@@ -13,7 +13,7 @@ Quick Setup
 :hr
 
 Nuxt Content projects can be deployed to AWS Amplify with zero configuration.
-The module will automatically detects AWS Amplify environment and prepare the necessary configuration for deployment.
+The module will automatically detect an AWS Amplify environment and will prepare the necessary configuration for deployment.
 
 All you need to do is to install `sqlite3` package in your project and go to AWS Amplify dashboard and create a new project using git repository.
 
