--- a/docs/content/docs/8.studio/1.setup.md
+++ b/docs/content/docs/8.studio/1.setup.md
@@ -15,15 +15,15 @@ description: Studio is the intuitive CMS interface to edit Nuxt Content
 
 Studio is an intuitive CMS interface to edit your Nuxt Content websites.
 
-It take advantage of the `Preview API` included in Nuxt Content to propose the best editing experience for your content files. Editors can benefit from a user-friendly interface to edit their `Markdown`, `YAML` or `JSON` files.
+It takes advantage of the `Preview API` included in Nuxt Content to propose the best editing experience for your content files. Editors can benefit from a user-friendly interface to edit their `Markdown`, `YAML` or `JSON` files.
 
-Developers can customize the edition experience and provide tools to the editor who can focus on content without requiring any technical expertise.
+Developers can customize the editing experience and provide tools to the editor who can focus on content without requiring any technical expertise.
 
 :video{autoplay controls loop poster="/home/videos/HomeNotionLikePoster.webp" src="https://res.cloudinary.com/nuxt/video/upload/v1733494722/contentv3final_rc8bvu.mp4"}
 
 ## Authentication
 
-The Studio admin is located on [nuxt.studio](https://nuxt.studio). From there you can either login with GitHub or with Google. Both methods give you the same edition rights but since Studio is [synchronized with GitHub](/docs/studio/github), the repository import must be handled by a GitHub user.
+The Studio admin is located on [nuxt.studio](https://nuxt.studio). From there you can either login with GitHub or with Google. Both methods give you the same editing rights but since Studio is [synchronized with GitHub](/docs/studio/github), the repository import must be handled by a GitHub user.
 
 ::warning
 Google authentication is adapted for non technical users. Google users have to join a team with existing projects to edit them.
