docs: limit TOC depth in prose components page

--- a/docs/content/docs/5.components/2.prose.md
+++ b/docs/content/docs/5.components/2.prose.md
@@ -6,6 +6,8 @@ links:
     icon: i-simple-icons-github
     size: sm
     to: https://github.com/nuxt-modules/mdc/tree/main/src/runtime/components/prose
+toc:
+  searchDepth: 2
 ---
 
 Prose components are replacements for HTML typography tags. Prose components provide a simple way to customize content UI.
