docs: update 1.markdown.md
The `/foo` path query should not be able to return a result.

--- a/docs/content/docs/3.files/1.markdown.md
+++ b/docs/content/docs/3.files/1.markdown.md
@@ -58,7 +58,7 @@ Now we can query blog posts:
 
 ```ts
 // Get the foo post
-const fooPost = await queryCollection('blog').path('/foo').first()
+const fooPost = await queryCollection('blog').path('/blog/foo').first()
 
 // Find all posts
 const allPosts = await queryCollection('blog').order('date', 'DESC').all()
