docs: fix missing quote in collection sources glob pattern

--- a/docs/content/docs/2.collections/3.sources.md
+++ b/docs/content/docs/2.collections/3.sources.md
@@ -26,7 +26,7 @@ The `source` property can be defined as either a string (following a glob patter
 
 **Example:**
 
-- `source: '**` includes all files within the content directory and its subdirectories.
+- `source: '**'` includes all files within the content directory and its subdirectories.
 - `source: '**/*.md'`includes all `Markdown` files within the content directory and its subdirectories.
 - `source: 'docs/**/*.yml'` includes all `YML` files within the `content/docs` and its subdirectories.
 - `source: '**/*.{json,yml}'` includes `JSON` or `YML` file within the content directory and all its subdirectories.
