docs: fix typos, add useful information and examples
docs: fix typo

docs: add section on automatic setup via create-nuxt cli

docs: add an example usage section for hooks

docs: fix typo

--- a/docs/content/docs/1.getting-started/2.installation.md
+++ b/docs/content/docs/1.getting-started/2.installation.md
@@ -35,6 +35,32 @@ export default defineNuxtConfig({
 })
 ```
 
+### Automatic Setup
+
+When starting a new Nuxt project with the `create-nuxt` CLI, you can simply select `@nuxt/content` from the interactive module selector. This will automatically install and register the module for you.
+
+::code-group
+```bash [npm]
+npm create nuxt <project-name>
+```
+
+```bash [yarn]
+yarn create nuxt <project-name>
+```
+
+```bash [pnpm]
+pnpm create nuxt <project-name>
+```
+
+```bash [bun]
+bun create nuxt <project-name>
+```
+
+```bash [deno]
+deno -A npm:create-nuxt@latest <project-name>
+```
+::
+
 ### Create your First Collection
 
 Create a `content.config.ts` file in your project root directory:
