--- a/docs/content/docs/4.utils/1.query-collection.md
+++ b/docs/content/docs/4.utils/1.query-collection.md
@@ -139,7 +139,7 @@ const { data } = await useAsyncData('featured-docs', () => {
 })
 ```
 
-### `order(field: keyof Collection, direction: 'ASC' | DESC)`
+### `order(field: keyof Collection, direction: 'ASC' | 'DESC')`
 
 Order the query results based on a specific field.
 
