--- a/docs/content/docs/5.components/0.content-renderer.md
+++ b/docs/content/docs/5.components/0.content-renderer.md
@@ -3,7 +3,7 @@ title: ContentRenderer
 description: Takes your component from an AST to a wonderful template.
 ---
 
-The `<ContentRenderer>` component renders a document coming from a query with [`queryCollections()`](/docs/utils/query-collection).
+The `<ContentRenderer>` component renders a document coming from a query with [`queryCollection()`](/docs/utils/query-collection).
 
 ::note 
 This component **only works** with `Markdown` files.
