docs(advanced): rename LLMs title

--- a/docs/content/docs/7.advanced/7.llms.md
+++ b/docs/content/docs/7.advanced/7.llms.md
@@ -1,6 +1,7 @@
 ---
-title: AI-ready content files(`llms.txt`)
-description: Learn how to generate AI-ready content files using Nuxt Content and the Nuxt LLMs module.
+title: LLMs Integration
+description: Learn how to generate AI-ready content files using Nuxt Content and
+  the Nuxt LLMs module.
 ---
 
 # LLMs Integration
@@ -35,7 +36,6 @@ That's it!
 
 Nuxt Content will automatically detect Nuxt LLMs module and will create a section to each `page` collection.
 
-
 ## Custom Sections
 
 The Content module enhances the LLMs module by adding two key options to control content generation:
@@ -46,7 +46,6 @@ The Content module enhances the LLMs module by adding two key options to control
 When generating content, the module uses these options to fetch and process your content into LLM-friendly formats (`llms.txt` and `llms_full.txt`).
 
 All you need is to add your custom sections to the `llms.sections` array and define the `contentCollection` and `contentFilters` for each section.
-
 
 ```ts
 // nuxt.config.ts
@@ -72,6 +71,7 @@ export default defineNuxtConfig({
   },
 })
 ```
+
 ::note
 If there is no section defined with the `contentCollection` option, the module will add `page` collections to the LLMs module.
 ::
@@ -79,6 +79,7 @@ If there is no section defined with the `contentCollection` option, the module w
 ### Content Filtering
 
 You can use `contentFilters` to precisely control which content is included. Each filter consists of:
+
 - `field`: The content property to check
 - `operator`: Comparison operator (`=`, `<>`, `>`, `<`, `LIKE`, `IN`, `NOT IN`, `IS NULL`, `IS NOT NULL`, etc.)
 - `value`: The value to compare against
