docs(advanced): update llms page

--- a/docs/content/docs/7.advanced/7.llms.md
+++ b/docs/content/docs/7.advanced/7.llms.md
@@ -4,24 +4,20 @@ description: Learn how to generate AI-ready content files using Nuxt Content and
   the Nuxt LLMs module.
 ---
 
-# LLMs Integration
+The Nuxt Content module integrates [`nuxt-llms`](https://github.com/nuxtlabs/nuxt-llms) to prepare your content for Large Language Models (LLMs). When `nuxt-llms` is detected, Content module automatically extends the LLMs module and inject collections of type [page](https://content.nuxt.com/docs/collections/types#page-type) to the LLMs module.🚀
 
-The Nuxt Content module seamlessly integrates with [`nuxt-llms`](https://github.com/nuxtlabs/nuxt-llms) to prepare your content for Large Language Models (LLMs). When `nuxt-llms` is detected, Content module automatically extends the LLMs module and inject `page` collection to the LLMs module.
+## Setup
 
-## Setup Guide
+::prose-steps
+### Install the required module
 
-1. First, install the required module:
-
-```bash
+```bash [terminal]
 npm install nuxt-llms
-# or
-yarn add nuxt-llms
 ```
 
-2. Configure your `nuxt.config.ts`:
+### Configure your `nuxt.config.ts`
 
-```ts
-// nuxt.config.ts
+```ts [nuxt.config.ts]
 export default defineNuxtConfig({
   modules: ['@nuxt/content', 'nuxt-llms'],
   llms: {
@@ -31,40 +27,63 @@ export default defineNuxtConfig({
   },
 })
 ```
+::
 
-That's it!
+That's it 🚀 `/llms.txt` file is automatically generated and pre-rendered.
 
-Nuxt Content will automatically detect Nuxt LLMs module and will create a section to each `page` collection.
+## Sections
 
-## Custom Sections
+When generating content, you can create custom sections to process your content into LLM-friendly formats.
 
-The Content module enhances the LLMs module by adding two key options to control content generation:
+You can create custom sections to the `llms.sections` array and define the `contentCollection` and `contentFilters` option for each section.
 
-- `contentCollection`: Specifies which content collection to use as source
-- `contentFilters`: Defines filters to select specific content within the collection
+::prose-warning
+If there is no section defined in the `contentCollection` option, the module will only add [page](https://content.nuxt.com/docs/collections/types#page-type) collections to the LLMs module.
+::
 
-When generating content, the module uses these options to fetch and process your content into LLM-friendly formats (`llms.txt` and `llms_full.txt`).
+### `contentCollection`
 
-All you need is to add your custom sections to the `llms.sections` array and define the `contentCollection` and `contentFilters` for each section.
+This option specifies which content collection to use as source.
 
-```ts
-// nuxt.config.ts
+```ts [nuxt.config.ts]
 export default defineNuxtConfig({
-  modules: ['@nuxt/content', 'nuxt-llms'],
   llms: {
-    domain: 'https://your-site.com',
-    title: 'Your Site Name',
-    description: 'A brief description of your site',
     sections: [
       {
         title: 'Documentation',
         description: 'Technical documentation and guides',
-        // Specify which content collection to use
         contentCollection: 'docs',
-        // Filter content as needed
+       },
+    ],
+  },
+})
+```
+
+### `contentFilters`
+
+This options defines filters to select specific content within the collection.
+
+You precisely control which content is included. Each filter consists of:
+
+- `field`: The content property to check
+- `operator`: Comparison operator (`=`, `<>`, `>`, `<`, `LIKE`, `IN`, `NOT IN`, `IS NULL`, `IS NOT NULL`, etc.)
+- `value`: The value to compare against
+
+```ts [nuxt.config.ts]
+export default defineNuxtConfig({
+  llms: {
+    sections: [
+      {
+        title: 'Documentation',
+        description: 'Technical documentation and guides',
+        contentCollection: 'docs',
         contentFilters: [
-          { field: 'extension', operator: '=', value: 'md' },
-          // You can add more filters here
+            // Only include markdown files
+            { field: 'extension', operator: '=', value: 'md' },
+            // Only include published content
+            { field: 'draft', operator: '<>', value: true },
+            // Filter by directory
+            { field: 'path', operator: 'LIKE', value: '/guide%' },
         ]
       },
     ],
@@ -72,31 +91,6 @@ export default defineNuxtConfig({
 })
 ```
 
-::note
-If there is no section defined with the `contentCollection` option, the module will add `page` collections to the LLMs module.
-::
-
-### Content Filtering
-
-You can use `contentFilters` to precisely control which content is included. Each filter consists of:
-
-- `field`: The content property to check
-- `operator`: Comparison operator (`=`, `<>`, `>`, `<`, `LIKE`, `IN`, `NOT IN`, `IS NULL`, `IS NOT NULL`, etc.)
-- `value`: The value to compare against
-
-Example filters:
-
-```ts
-contentFilters: [
-  // Only include markdown files
-  { field: 'extension', operator: '=', value: 'md' },
-  // Only include published content
-  { field: 'draft', operator: '<>', value: true },
-  // Filter by directory
-  { field: 'path', operator: 'LIKE', value: '/guide%' },
-]
-```
-
-::tip
-Checkout the [nuxt-llms documentation](https://github.com/nuxtlabs/nuxt-llms) for more information on how to use the LLMs module.
+::tip{to="https://github.com/nuxtlabs/nuxt-llms"}
+Checkout the nuxt-llms documentation for more information about the module.
 ::
