Correction in serverless config for Cloudflare D1
D1DatabaseConfig [1] expects 'bindingName' property, documentation refers to it as 'binding'

[1]: https://github.com/nuxt/content/blob/b01e307721e3e88ae9a54997d95aaaec9a36d77f/src/types/module.ts#L9

--- a/docs/content/docs/6.deploy/2.serverless.md
+++ b/docs/content/docs/6.deploy/2.serverless.md
@@ -46,7 +46,7 @@ export default defineNuxtConfig({
   content: {
     database: {
       type: 'd1',
-      binding: '<YOUR_BINDING_NAME>'
+      bindingName: '<YOUR_BINDING_NAME>'
     }
   }
 })
